--- a/package.json
+++ b/package.json
@@ -107,7 +107,9 @@
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.3.0",
@@ -158,8 +160,6 @@
     "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
     "rimraf": "^5.0.1",
-    "sass": "^1.67.0",
-    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
     "ts-jest": "^29.1.1",
